--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "query-string": "^6.11.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.2",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.5",
+    "vue2-google-maps": "^0.10.7",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
